--- a/package.json
+++ b/package.json
@@ -143,6 +143,8 @@
   },
   "license": "GPL-3.0-or-later",
   "dependencies": {
-    "@material-ui/core": "^4.11.4"
+    "@apollo/client": "^3.3.20",
+    "@material-ui/core": "^4.11.4",
+    "graphql": "^15.5.1"
   }
 }
