--- a/package.json
+++ b/package.json
@@ -145,6 +145,8 @@
   "dependencies": {
     "@apollo/client": "^3.3.20",
     "@material-ui/core": "^4.11.4",
-    "graphql": "^15.5.1"
+    "date-fns": "^2.22.1",
+    "graphql": "^15.5.1",
+    "lodash": "^4.17.21"
   }
 }
