--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/luxon": "^1.24.4",
     "@types/multicodec": "^1.0.0",
     "@types/node": "^13.13.5",
+    "@types/numeral": "^2.0.1",
     "@types/qs": "^6.9.2",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
@@ -147,6 +148,7 @@
     "@material-ui/core": "^4.11.4",
     "date-fns": "^2.22.1",
     "graphql": "^15.5.1",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "numeral": "^2.0.6"
   }
 }
