--- a/package.json
+++ b/package.json
@@ -149,6 +149,7 @@
     "date-fns": "^2.22.1",
     "graphql": "^15.5.1",
     "lodash": "^4.17.21",
-    "numeral": "^2.0.6"
+    "numeral": "^2.0.6",
+    "react-hotjar": "^3.0.0"
   }
 }
