--- a/package.json
+++ b/package.json
@@ -113,13 +113,13 @@
     "compile-contract-types": "yarn compile-external-abi-types && yarn compile-v2-contract-types",
     "compile-external-abi-types": "typechain --target ethers-v5 --out-dir src/abis/types './src/abis/**/*.json'",
     "compile-v2-contract-types": "typechain --target ethers-v5 --out-dir src/types/v2 './src/contracts/**/*.json'",
-    "build": "yarn compile-contract-types && yarn i18n:extract && yarn i18n:compile && react-scripts build",
+    "build": "yarn compile-contract-types && yarn i18n:gen && react-scripts build",
     "i18n:extract": "lingui extract --locale en-US",
     "i18n:compile": "lingui compile",
     "integration-test": "start-server-and-test 'serve build -l 3000' http://localhost:3000 'cypress run'",
     "postinstall": "yarn compile-contract-types",
     "start": "yarn compile-contract-types && react-scripts start",
-    "i18n:gen": "yarn i18n:extract && yarn i18n:compile",
+    "i18n:gen": "yarn lingui extract && yarn i18n:compile",
     "lingui": "lingui",
     "test": "react-scripts test --env=jsdom"
   },
