--- a/package.json
+++ b/package.json
@@ -65,7 +65,6 @@
     "eslint-plugin-react-hooks": "^4.0.0",
     "ethers": "^5.2.0",
     "inter-ui": "^3.13.1",
-    "lightweight-charts": "^3.3.0",
     "lodash.flatmap": "^4.5.0",
     "luxon": "^1.25.0",
     "multicodec": "^3.0.1",
@@ -149,6 +148,7 @@
     "graphql": "^15.5.1",
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
-    "react-hotjar": "^3.0.0"
+    "react-hotjar": "^3.0.0",
+    "recharts": "^2.0.9"
   }
 }
