--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "homepage": ".",
   "private": true,
   "devDependencies": {
+    "@apollo/client": "^3.3.20",
     "@ethersproject/experimental": "^5.2.0",
     "@lingui/cli": "^3.9.0",
     "@lingui/loader": "^3.9.0",
     "@lingui/macro": "^3.9.0",
     "@lingui/react": "^3.9.0",
+    "@material-ui/core": "^4.11.4",
     "@metamask/jazzicon": "^2.0.0",
     "@popperjs/core": "^2.4.4",
     "@reach/dialog": "^0.10.3",
@@ -55,17 +57,20 @@
     "copy-to-clipboard": "^3.2.0",
     "cross-env": "^7.0.2",
     "cypress": "^4.11.0",
+    "date-fns": "^2.22.1",
     "eslint": "^7.11.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^4.0.0",
     "ethers": "^5.2.0",
+    "graphql": "^15.5.1",
     "lodash": "^4.17.21",
     "luxon": "^1.25.0",
     "multicodec": "^3.0.1",
     "multihashes": "^4.0.2",
     "node-vibrant": "^3.1.5",
+    "numeral": "^2.0.6",
     "polished": "^3.3.2",
     "prettier": "^2.2.1",
     "qs": "^6.9.4",
@@ -85,6 +90,7 @@
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.8.5",
     "rebass": "^4.0.7",
+    "recharts": "^2.0.9",
     "redux-localstorage-simple": "^2.3.1",
     "serve": "^11.3.2",
     "start-server-and-test": "^1.11.0",
@@ -138,12 +144,6 @@
   },
   "license": "GPL-3.0-or-later",
   "dependencies": {
-    "@apollo/client": "^3.3.20",
-    "@material-ui/core": "^4.11.4",
-    "date-fns": "^2.22.1",
-    "graphql": "^15.5.1",
-    "numeral": "^2.0.6",
-    "react-hotjar": "^3.0.0",
-    "recharts": "^2.0.9"
+    "react-hotjar": "^3.0.0"
   }
 }
