--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,5 +1,7 @@
 project_id: "468584"
-branch: "dev" //generate yours apiToken and add as api_token: "apiToken"
+branch: "dev"
+api_token_env: "CROWDIN_PERSONAL_TOKEN"
+preserve_hierarchy: true
 files:
   - source: 'src/locales/en-US.po'
     translation: 'src/locales/%locale%.po'
