Updated default command to clean up the missing messages.

--- a/package.json
+++ b/package.json
@@ -120,7 +120,7 @@
     "integration-test": "start-server-and-test 'serve build -l 3000' http://localhost:3000 'cypress run'",
     "postinstall": "yarn compile-contract-types",
     "start": "yarn compile-contract-types && react-scripts start",
-    "i18n:gen": "yarn lingui extract && yarn i18n:compile",
+    "i18n:gen": "yarn lingui extract --clean && yarn i18n:compile",
     "lingui": "lingui",
     "test": "react-scripts test --env=jsdom",
     "netlify": "netlify",
