--- a/.github/workflows/crowdin_download.yaml
+++ b/.github/workflows/crowdin_download.yaml
@@ -51,7 +51,7 @@ jobs:
           source: 'src/locales/en-US.po'
           translation: 'src/locales/%locale%.po'
           create_pull_request: false
-          localization_branch_name: main
+          localization_branch_name: l10n
           commit_message: "chore(i18n): synchronize translations from crowdin [skip ci]"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
