--- a/.env
+++ b/.env
@@ -1,4 +1,11 @@
+REACT_APP_WEB_API="http://54.171.9.121/"
+REACT_APP_ROPSTEN_NAHMII_RPC="https://l2.testnet.nahmii.io/"
+REACT_APP_EXPLORER="https://explorer.testnet.nahmii.io/"
+REACT_APP_TOKEN_LOGO_BASE="https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/"
+REACT_APP_ISSUES_BASE="https://github.com/NiiFi/uinterface/issues/"
+REACT_APP_DISCORD="https://discord.gg/ssjzvjZX89"
+REACT_APP_TWITTER="https://twitter.com/NiiFiDAO"
+REACT_APP_TELEGRAM="https://t.me/NiiFiDAO"
 REACT_APP_INFURA_KEY="4bf032f2d38a4ed6bb975b80d6340847"
-REACT_APP_WALLETCONNECT_BRIDGE_URL="https://uniswap.bridge.walletconnect.org"
 REACT_APP_HOTJAR_KEY='2472380'
 REACT_APP_HOTJAR_VERSION='6'
