--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@lingui/react": "^3.9.0",
     "@material-ui/core": "^4.11.4",
     "@metamask/jazzicon": "^2.0.0",
+    "@niifi/godzilla2-sdk": "git+ssh://git@github.com:NiiFi/godzilla2-sdk.git",
     "@popperjs/core": "^2.4.4",
     "@reach/dialog": "^0.10.3",
     "@reach/portal": "^0.10.3",
@@ -46,7 +47,6 @@
     "@uniswap/token-lists": "^1.0.0-beta.19",
     "@uniswap/v2-core": "1.0.0",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
-    "@uniswap/v2-sdk": "^3.0.0-alpha.2",
     "@web3-react/core": "^6.0.9",
     "@web3-react/fortmatic-connector": "^6.0.9",
     "@web3-react/injected-connector": "^6.0.7",
