fix addresses, remove useless packages, modify ETH

--- a/package.json
+++ b/package.json
@@ -40,9 +40,6 @@
     "@types/wcag-contrast": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^4.1.0",
     "@typescript-eslint/parser": "^4.1.0",
-    "@uniswap/governance": "^1.0.2",
-    "@uniswap/liquidity-staker": "^1.0.2",
-    "@uniswap/merkle-distributor": "1.0.1",
     "@uniswap/token-lists": "^1.0.0-beta.19",
     "@uniswap/v2-core": "1.0.0",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
@@ -112,7 +109,7 @@
     "compile-external-abi-types": "typechain --target ethers-v5 --out-dir src/abis/types \"./src/abis/**/*.json\"",
     "compile-v2-contract-types": "typechain --target ethers-v5 --out-dir src/types/v2 \"./src/contracts/**/*.json\"",
     "prebuild": "yarn compile-contract-types && yarn i18n:gen",
-    "build": "yarn prebuild && env-cmd -f .env react-scripts build",
+    "build": "env-cmd -f .env react-scripts build",
     "build:staging": "yarn prebuild && env-cmd -f .env.staging react-scripts build",
     "build:production": "yarn prebuild && env-cmd -f .env.production react-scripts build",
     "i18n:extract": "lingui extract --locale en-US",
