--- a/bin/nginx.conf
+++ b/bin/nginx.conf
@@ -1,7 +1,7 @@
 server {
 
     listen 8080;
-    server_name *;
+    server_name local.niifi.com;
 
     root /var/uinterface/build;
     index index.html;
