--- a/package.json
+++ b/package.json
@@ -90,7 +90,6 @@
     "start-server-and-test": "^1.11.0",
     "styled-components": "^4.2.0",
     "styled-system": "^5.1.5",
-    "typechain": "^5.0.0",
     "typescript": "^4.2.3",
     "ua-parser-js": "^0.7.28",
     "use-count-up": "^2.2.5",
@@ -146,6 +145,7 @@
   "dependencies": {
     "env-cmd": "^10.1.0",
     "react-circular-progressbar": "^2.0.4",
-    "react-hotjar": "^3.0.0"
+    "react-hotjar": "^3.0.0",
+    "typechain": "^5.0.0"
   }
 }
