--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "react-device-detect": "^1.6.2",
     "react-dom": "^17.0.1",
     "react-feather": "^2.0.8",
-    "react-ga": "^2.5.7",
+    "react-ga4": "^1.4.0",
     "react-markdown": "^4.3.1",
     "react-popper": "^2.2.3",
     "react-redux": "^7.2.2",
