--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@lingui/react": "^3.9.0",
     "@material-ui/core": "^4.11.4",
     "@metamask/jazzicon": "^2.0.0",
-    "@niifi/godzilla2-sdk": "github:NiiFi/godzilla2-sdk#0.0.4",
     "@popperjs/core": "^2.4.4",
     "@reach/dialog": "^0.10.3",
     "@reach/portal": "^0.10.3",
@@ -142,6 +141,7 @@
   },
   "license": "GPL-3.0-or-later",
   "dependencies": {
+    "@niifi/godzilla2-sdk": "0.0.8",
     "@typechain/ethers-v5": "^7.0.0",
     "env-cmd": "^10.1.0",
     "react-circular-progressbar": "^2.0.4",
