--- a/.env.staging
+++ b/.env.staging
@@ -1,3 +1,4 @@
 REACT_APP_WEB_API="https://test-query.niifi.com/api/v1/"
 REACT_APP_INFURA_KEY="099fc58e0de9451d80b18d7c74caa7c1"
 REACT_APP_GOOGLE_ANALYTICS_ID="G-LSVXKJYVGS"
+REACT_APP_FACTORY_ADDRESS='0x11AB0Ca40B2E9Bf2c98718539cA1aD7486999E57'
