retry with tests

--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ REACT_APP_INFURA_KEY="4bf032f2d38a4ed6bb975b80d6340847"
 REACT_APP_HOTJAR_KEY='2472380'
 REACT_APP_HOTJAR_VERSION='6'
 REACT_APP_FACTORY_ADDRESS='0x11AB0Ca40B2E9Bf2c98718539cA1aD7486999E57'
+SKIP_PREFLIGHT_CHECK=true
