--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "niifi_uinterface",
   "description": "NiiFi Uinterface",
-  "homepage": ".",
+  "homepage": "app.niifi.com",
   "private": true,
   "devDependencies": {
     "@ethersproject/experimental": "^5.2.0",
