--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "niifi_uinterface",
   "description": "NiiFi Uinterface",
   "homepage": "app.niifi.com",
-  "private": true,
+  "private": false,
   "devDependencies": {
     "@ethersproject/experimental": "^5.2.0",
     "@lingui/cli": "^3.9.0",
