--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 REACT_APP_WEB_API="https://test-query.niifi.com/api/v1/"
+REACT_APP_ONDEMAND_API="https://test-ondemand.niifi.com/api/v1/"
 REACT_APP_ROPSTEN_NAHMII_RPC="https://l2.testnet.nahmii.io/"
 REACT_APP_EXPLORER="https://explorer.testnet.nahmii.io/"
 REACT_APP_TOKEN_LOGO_BASE="https://raw.githubusercontent.com/NiiFi/tokenIcons/dev/"
