--- a/.github/workflows/production-aws.yaml
+++ b/.github/workflows/production-aws.yaml
@@ -13,6 +13,7 @@ jobs:
     steps:
       - name: Trigger AWS CodePipeline
         uses: zulhfreelancer/aws-codepipeline-action@v1.0.7
+        if: github.ref == 'refs/heads/main'
         with:
           aws-region: "eu-west-1"
           aws-access-key: ${{ secrets.AWS_PIPELINE_ACCESS_KEY }}
