setup user information deposit and borrow

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 REACT_APP_WEB_API="https://test-query.niifi.com/api/v1/"
 REACT_APP_ONDEMAND_API="https://test-ondemand.niifi.com/api/v1/"
 REACT_APP_ROPSTEN_NAHMII_RPC="https://l2.testnet.nahmii.io/"
+REACT_APP_NAHMII_LENDING_RPC="https://kovan.infura.io/v3/aed817feec724469b63cc270f0352b68"
 REACT_APP_EXPLORER="https://explorer.testnet.nahmii.io/"
 REACT_APP_TOKEN_LOGO_BASE="https://raw.githubusercontent.com/NiiFi/tokenIcons/dev/"
 REACT_APP_ISSUES_BASE="https://github.com/NiiFi/uinterface/issues/"
@@ -11,4 +12,6 @@ REACT_APP_INFURA_KEY="4bf032f2d38a4ed6bb975b80d6340847"
 REACT_APP_HOTJAR_KEY='2472380'
 REACT_APP_HOTJAR_VERSION='6'
 REACT_APP_FACTORY_ADDRESS='0x11AB0Ca40B2E9Bf2c98718539cA1aD7486999E57'
+REACT_APP_PROTOCOL_DATA_PROVIDER_ADDRESS='0x3c73a5e5785cac854d468f727c606c07488a29d6'
+REACT_APP_LENDING_PRICE_PROVIDER_ADDRESS='0xb8be51e6563bb312cbb2aa26e352516c25c26ac1'
 SKIP_PREFLIGHT_CHECK=true
