--- a/bin/nginx.conf
+++ b/bin/nginx.conf
@@ -1,11 +1,9 @@
 server {
-
-    listen 8080;
-    server_name local.niifi.com;
-
-    root /var/uinterface/build;
-    index index.html;
+    listen 80;
     location / {
-       try_files $uri $uri/ =404;
+        root /usr/share/nginx/html;
+        index index.html index.htm;
+        try_files $uri $uri/ /index.html =404;
     }
 }
+
