Fix Dockerfile/GH action: Differentiate URL per branch
Also add temporary "preview" envs. These should be removed

--- a/package.json
+++ b/package.json
@@ -118,7 +118,11 @@
     "prebuild": "yarn compile-contract-types && yarn i18n:gen",
     "build": "env-cmd -f .env react-scripts build",
     "build:staging": "yarn prebuild && env-cmd -f .env.staging react-scripts build",
+    "build:dev": "yarn prebuild && env-cmd -f .env.staging react-scripts build",
     "build:production": "yarn prebuild && env-cmd -f .env.production react-scripts build",
+    "build:main": "yarn prebuild && env-cmd -f .env.production react-scripts build",
+    "build:preview-prod": "yarn prebuild && env-cmd -f .env.preview-prod react-scripts build",
+    "build:preview-stage": "yarn prebuild && env-cmd -f .env.preview-stage react-scripts build",
     "i18n:extract": "lingui extract --locale en-US",
     "i18n:compile": "lingui compile",
     "integration-test": "start-server-and-test 'serve build -l 3000' http://localhost:3000 'cypress run'",
