Update prod API url, remove "preview" envs

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-REACT_APP_WEB_API="https://query.niifi.com/api/v1/"
+REACT_APP_WEB_API="https://api.niifi.com/api/v1/"
 REACT_APP_ONDEMAND_API="https://ondemand.niifi.com/api/v1/"
 REACT_APP_ROPSTEN_NAHMII_RPC="https://l2.nahmii.io/"
 REACT_APP_EXPLORER="https://explorer.nahmii.io/"
