--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,6 +11,7 @@ on:
   workflow_dispatch:
 env:
   IMAGE_TAG: ${{ github.ref_name }}-${{ github.sha }}
+  ECR_REPOSITORY: niifi-uinterface
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   build-and-push-to-ecr:
@@ -20,8 +21,8 @@ jobs:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-access-key-id: ${{ secrets.PRODUCTS_ECR_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.PRODUCTS_ECR_SECRET_ACCESS_KEY }}
         aws-region: eu-central-1
     - name: Login to Amazon ECR
       id: login-ecr
@@ -29,7 +30,6 @@ jobs:
     - name: Build, tag, and push image to Amazon ECR
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: niifi-uinterface
       run: |
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -t $ECR_REGISTRY/$ECR_REPOSITORY:latest --build-arg ENV=${{ github.ref_name }} .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY -a
